Orpie ChangeLog
------------------------------------------------------------------------

v1.5

   2007-09-13        Version 1.5.1 release.
   
                     pow() now avoids using complex arithmetic in
                     some cases, leading to more pleasant results
                     for expressions like 2^3 - 7.
                     
                     Fixed "invalid argument" crash bug when typing
                     an unprintable character during entry of units.
                     
                     Made a minor syntactical change for compatibility
                     with OCaml 3.10.0.

   2007-09-13        Version 1.5.0 release.

   2007-07-01        Complete rewrite of units implementation, allowing
                     user-defined units and physical constants.

   2007-05-06        Updated included ocamlgsl bindings to 0.6.0.

   2006-11-13        Square root of a negative value now returns a
                     complex result.

   2006-11-12        gcd(), lcd(), and mod() now accept real-valued 
                     arguments.
   
                     Fix for crash in abbrev mode.

   2004-09-09        Made a minor Makefile change to correct linking
                     errors under Gentoo (maybe others).

                     Numerous code cleanups.  Calculator code has
                     been better separated from interface code.

   2004-09-07        Support --sysconfdir configure option.  (Anyone
                     packaging for the filesystem hierarchy standard
                     will now need to use something like "./configure
                     --prefix=/usr --sysconfdir=/etc".)

   2004-09-03        Implemented entry of most fundamental physical 
                     constants.

   2004-08-31        Fixed incorrect error message regarding deprecated
                     extended_enter command.

v1.4

   2005-10-29        Version 1.4.3 release.

                     Backported a bugfix for crash when executing